--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "David Diner <nejiogrsnklweioh@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
     "path": "^0.12.7",
@@ -20,6 +21,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
     "html-webpack-plugin": "^2.30.1",
@@ -33,6 +35,8 @@
     "node-sass": "^4.7.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
-    "webpack-dev-server": "^2.9.4"
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "webpack-dev-server": "^2.9.4",
+    "webpack-merge": "^4.1.1"
   }
 }
