--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
   "author": "David Diner <nejiogrsnklweioh@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "lint": "eslint \"$@\"",
+    "precommit": "lint-staged",
+    "start": "webpack-dev-server --config webpack.dev.js --progress"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "eslint"
   },
   "dependencies": {
     "path": "^0.12.7",
@@ -24,7 +29,13 @@
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "husky": "^0.14.3",
+    "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
@@ -32,6 +43,7 @@
     "karma-jasmine": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.6",
+    "lint-staged": "^5.0.0",
     "node-sass": "^4.7.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
