--- a/package.json
+++ b/package.json
@@ -10,32 +10,38 @@
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint \"$@\"",
     "precommit": "lint-staged",
-    "start": "webpack-dev-server --config webpack.dev.js --progress"
+    "start": "webpack-dev-server --config webpack.dev.js --progress",
+    "start:prod": "yarn build && NODE_ENV=production node ./server/index.js",
+    "test": "karma start"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint"
   },
   "dependencies": {
-    "path": "^0.12.7",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "webpack": "^3.8.1"
-  },
-  "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "clean-webpack-plugin": "^0.1.17",
+    "express": "^4.16.2",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.1",
+    "path": "^0.12.7",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-merge": "^4.1.1"
+  },
+  "devDependencies": {
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
-    "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
-    "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
@@ -44,11 +50,6 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.6",
     "lint-staged": "^5.0.0",
-    "node-sass": "^4.7.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.0.1",
-    "webpack-dev-server": "^2.9.4",
-    "webpack-merge": "^4.1.1"
+    "webpack-dev-server": "^2.9.4"
   }
 }
