--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
-/*
-    ./.babelrc
-*/
 {
-    "presets":[
-        "es2015", "react"
-    ]
+  "presets":[
+    "env", "react"
+  ],
+  "plugins": [
+    "transform-class-properties",
+  ]
 }
