--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
     "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
     "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.1",
     "path": "^0.12.7",
+    "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "sass-loader": "^6.0.6",
@@ -36,8 +38,10 @@
     "webpack-merge": "^4.1.1"
   },
   "devDependencies": {
+    "babel-eslint": "^8.0.2",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-class-property": "^1.0.6",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
